# e-commerce-website-example

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
assets/images/index/: banner.avif
assets/images/site/: cart-banner.avif
assets/pages/: billing.css  billing.html  cart.css  cart.html  contact.css  contact.html  index.html  login.html  loginandregister.css  product.css  product.html  profile.css  profile.html  profileaddress.css  profileaddress.html  register.html  style.css
assets/scripts/: utils.js
migrations/: 20230221074031_website-init.sql  20230329012321_load-products.sql
src/: lib.rs  main.rs
src/routes/: get_handlers.rs  mod.rs  post_handlers.rs
src/utils/: auth.rs  jwt.rs  mod.rs  models.rs
