[package]
name = "e-commerce-website-example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0", features = ["macros", "headers"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "macros",
] }
sqlx-core = "0.6.2"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
http = "0.2.9"
tower-http = { version = "0.4.0", features = ["fs", "auth", "cors"] }
pwhash = "1.0.0"
uuid = { version = "1.3.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde"
] }
jsonwebtoken = "8.3.0"


[build-dependencies]
tokio = { version = "1.21.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }
dotenv = "0.15.0"
